fix(stepper): missing auto overflow for content

--- a/src/platform/core/steps/step-body/step-body.component.scss
+++ b/src/platform/core/steps/step-body/step-body.component.scss
@@ -1,3 +1,6 @@
 .td-step-body {
   overflow-x: hidden;
+  .td-step-content {
+    overflow-x: auto; 
+  }
 }
